src/test/deca/context/invalid/Objet/BadTypeCall-Var.deca
// Description:
//      calling a method a a on-class variable
//
// Results:
//      RUle (3.71) Cannot call method on a non-class type
//
// History:
//      created on 17/1/2022

class A {
    protected int x;
    int foo() {
        return 1;
    }
}

{
    int y ;
    A a = new A();
    int x = y.foo(5);
}